--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Cansunun Web sitesi</h1>
+    <h1>Cansunun Web sitesi aaaa</h1>
     <script src="./script.js"></script>
   </body>
 </html>
