sayfa düzeneği kuruldu

--- a/index.html
+++ b/index.html
@@ -3,11 +3,51 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    <title>HOME</title>
   </head>
   <body>
-    <h1>Cansunun Web sitesi aaaa</h1>
-    <script src="./script.js"></script>
+    <!-- Sticky Navbar-->
+    <nav class="nav">
+      <div class="navContainer">
+        <h1 class="logo"><a href="/index.html">CANSU</a></h1>
+        <ul>
+          <li><a href="#" class="current">Home</a></li>
+          <li><a href="./pages/works/works.html">Works</a></li>
+          <li><a href="#">Sketches</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
+
+    <div class="port">
+      <div class="container"></div>
+    </div>
+
+    <section class="portcontent">
+      <h2>Hi,</h2>
+      <h2>I am Cansu</h2>
+      <h2>and this is my</h2>
+      <h2><strong>artistic journey</strong></h2>
+    </section>
+
+    <!-- Fixed Image-->
+    <section class="parallax">
+      <div class="parallax-inner"></div>
+    </section>
+
+    <section class="portcontent">
+      <h2>A Little About Her</h2>
+      <p>
+        Cansu is a computer engineering student in Antalya, TURKEY. She has
+        eight years of ongoing artistic experience. She can develop her skills
+        in everything that captures her attention. She has experience in
+        illustration, digital art, and graphic design. She is passionate about
+        seeking new adventures and challenges.
+      </p>
+    </section>
+
+    <script src="script.js"></script>
   </body>
 </html>
