--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style/nav.css" />
     <title>HOME</title>
   </head>
   <body>
-    <!-- Sticky Navbar-->
     <nav class="nav">
       <div class="navContainer">
         <h1 class="logo"><a href="/index.html">CANSU</a></h1>
         <ul>
           <li><a href="#" class="current">Home</a></li>
           <li><a href="./pages/works/works.html">Works</a></li>
-          <li><a href="#">Sketches</a></li>
+          <li><a href="./">Sketches</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
@@ -48,6 +48,6 @@
       </p>
     </section>
 
-    <script src="script.js"></script>
+    <script src="style/nav.js"></script>
   </body>
 </html>
