--- a/pages/works/works.html
+++ b/pages/works/works.html
@@ -4,19 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="works.css" />
+    <link rel="stylesheet" href="../../style/nav.css" />
+
     <title>Works</title>
   </head>
   <body>
     <!-- sticky navbar -->
     <nav class="nav">
-      <div class="box">
+      <div class="navContainer">
         <h1 class="logo"><a href="/index.html">CANSU</a></h1>
         <ul>
           <li><a href="../../index.html">Home</a></li>
           <li><a href="#" class="current">Works</a></li>
-          <li><a href="#">Sketches</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="../../sketches.html">Sketches</a></li>
+          <li><a href="../../about.html">About</a></li>
+          <li><a href="../../contact.html">Contact</a></li>
         </ul>
       </div>
     </nav>
@@ -32,6 +34,6 @@
 
       <div class="popup"></div>
     </div>
-    <script src="works.js"></script>
+    <script src="nav.js"></script>
   </body>
 </html>
