sayfa düzeneği kuruldu

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     </div>
 
     <section class="portcontent">
-      <h2>Hi,</h2>
-      <h2>I am Cansu</h2>
-      <h2>and this is my</h2>
-      <h2><strong>artistic journey</strong></h2>
+      <h1>Hi,</h1>
+      <h1>I am Cansu</h1>
+      <h1>and this is my</h1>
+      <h1><strong>artistic journey</strong></h1>
     </section>
 
     <!-- Fixed Image-->
@@ -47,6 +47,37 @@
         seeking new adventures and challenges.
       </p>
     </section>
+
+    <div class="btn-container">
+      <button class="learn-more-btn">Learn More</button>
+    </div>
+
+    <div class="cont">
+      <div class="img-cont">
+        <div class="image">
+          <img
+            src="https://cansusart.weebly.com/uploads/1/4/4/8/144889150/published/mg20230131125846.jpg?1677230087"
+          />
+          <div class="content">
+            <h1>Sketches</h1>
+            <p>textextextextextext</p>
+          </div>
+        </div>
+        <div class="image">
+          <img
+            src="https://cansusart.weebly.com/uploads/1/4/4/8/144889150/ar-el41_orig.png"
+          />
+          <div class="content">
+            <h1>Works</h1>
+            <p>textextextextextext</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="btn-container">
+        <button class="contact-btn">Contact</button>
+      </div>
+
 
     <script src="style/nav.js"></script>
   </body>
