--- a/pages/works/works.html
+++ b/pages/works/works.html
@@ -35,5 +35,6 @@
       <div class="popup"></div>
     </div>
     <script src="nav.js"></script>
+    <script src="works.js"></script>
   </body>
 </html>
