++ nav css fixed ++ nav.js apth changed

--- a/pages/works/works.html
+++ b/pages/works/works.html
@@ -5,17 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="works.css" />
     <link rel="stylesheet" href="../../style/nav.css" />
-
     <title>Works</title>
   </head>
   <body>
     <!-- sticky navbar -->
-    <nav class="nav">
+    <nav id="nav">
       <div class="navContainer">
         <h1 class="logo"><a href="/index.html">CANSU</a></h1>
         <ul>
           <li><a href="../../index.html">Home</a></li>
-          <li><a href="#" class="current">Works</a></li>
+          <li><a href="./works.html" class="current">Works</a></li>
           <li><a href="../../sketches.html">Sketches</a></li>
           <li><a href="../../about.html">About</a></li>
           <li><a href="../../contact.html">Contact</a></li>
@@ -34,7 +33,7 @@
 
       <div class="popup"></div>
     </div>
-    <script src="nav.js"></script>
     <script src="works.js"></script>
+    <script src="../../javascript/nav.js"></script>
   </body>
 </html>
