--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <title>HOME</title>
   </head>
   <body>
-    <nav class="nav">
+    <nav id="nav">
       <div class="navContainer">
         <h1 class="logo"><a href="/index.html">CANSU</a></h1>
         <ul>
-          <li><a href="#" class="current">Home</a></li>
+          <li><a href="./index.html" class="current">Home</a></li>
           <li><a href="./pages/works/works.html">Works</a></li>
           <li><a href="./">Sketches</a></li>
           <li><a href="#">About</a></li>
@@ -79,6 +79,6 @@
       </div>
 
 
-    <script src="style/nav.js"></script>
+    <script src="./javascript/nav.js"></script>
   </body>
 </html>
