++ landing background vh bağlancak ++ resim çubuk ++ paragraf mobile ++ image hover text fix

--- a/index.html
+++ b/index.html
@@ -21,20 +21,56 @@
       </div>
     </nav>
 
+    <nav id="mobile-nav" class="mobile-nav active">
+      <div class="navContainer">
+        <h1 class="logo"><a href="/index.html">CANSU</a></h1>
+
+        <button class="toggle-btn icon" id="toggle" onclick="toggleMobileNav()">
+          <div class="line line1"></div>
+          <div class="line line2"></div>
+        </button>
+      </div>
+
+      <ul>
+        <li>
+          <a href="./index.html" class="current">Home</a>
+          <div class="hr"></div>
+        </li>
+        <li>
+          <a href="./pages/works/works.html">Works</a>
+          <div class="hr"></div>
+        </li>
+        <li>
+          <a href="./">Sketches</a>
+          <div class="hr"></div>
+        </li>
+        <li>
+          <a href="#">About</a>
+          <div class="hr"></div>
+        </li>
+        <li>
+          <a href="#">Contact</a>
+          <div class="hr"></div>
+        </li>
+      </ul>
+    </nav>
+
     <div class="port">
-      <div class="container"></div>
+      <!-- <div class="container"></div> -->
     </div>
 
     <section class="portcontent">
-      <h1>Hi,</h1>
-      <h1>I am Cansu</h1>
-      <h1>and this is my</h1>
-      <h1><strong>artistic journey</strong></h1>
+      <h1>
+        Hi, <br />
+        I am <strong>Cansu</strong> <br />
+        and this is my <br />
+        <strong>artistic journey</strong>
+      </h1>
     </section>
 
     <!-- Fixed Image-->
     <section class="parallax">
-      <div class="parallax-inner"></div>
+      <!-- <div class="parallax-inner"></div> -->
     </section>
 
     <section class="portcontent">
@@ -73,11 +109,13 @@
           </div>
         </div>
       </div>
+    </div>
 
-      <div class="btn-container">
-        <button class="contact-btn">Contact</button>
-      </div>
+    <button class="contact-btn">Contact</button>
 
+    <footer>
+      <!-- Burayı doldur -->
+    </footer>
 
     <script src="./javascript/nav.js"></script>
   </body>
