--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="./style/nav.css" />
-    <title>HOME</title>
+    <title>Home</title>
   </head>
   <body>
     <nav id="nav">
@@ -14,14 +14,14 @@
         <ul>
           <li><a href="./index.html" class="current">Home</a></li>
           <li><a href="./pages/works/works.html">Works</a></li>
-          <li><a href="./">Sketches</a></li>
-          <li><a href="#">About</a></li>
+          <li><a href="./pages/sketches/sketches.html">Sketches</a></li>
+          <li><a href="./pages/about/about.html">About</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
       </div>
     </nav>
 
-    <nav id="mobile-nav" class="mobile-nav active">
+    <nav id="mobile-nav" class="mobile-nav">
       <div class="navContainer">
         <h1 class="logo"><a href="/index.html">CANSU</a></h1>
 
@@ -84,8 +84,15 @@
       </p>
     </section>
 
+    <!---->
     <div class="btn-container">
-      <button class="learn-more-btn">Learn More</button>
+      <button
+        type="button"
+        class="learn-more-btn"
+        onclick="http://127.0.0.1:5502/pages/about/about.html"
+      >
+        Learn More
+      </button>
     </div>
 
     <div class="cont">
@@ -109,13 +116,50 @@
           </div>
         </div>
       </div>
+
+      <section class="parallax"></section>
     </div>
 
-    <button class="contact-btn">Contact</button>
+    <footer class="parallax">
+      <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
+        rel="stylesheet"
+      />
 
-    <footer>
-      <!-- Burayı doldur -->
+      <div class="social-media">
+        <a
+          href="https://www.instagram.com/cansuesue/?hl=tr"
+          target="_blank"
+          class="instagram-button"
+        >
+          <i class="fab fa-instagram"></i>
+        </a>
+
+        <a
+          href="https://github.com/Cansucansu3"
+          target="_blank"
+          class="github-button"
+        >
+          <i class="fab fa-github"></i>
+        </a>
+
+        <a
+          href="mailto:cnsaksoy03@gmail.com"
+          target="_blank"
+          class="email-button"
+        >
+          <i class="fas fa-envelope"></i>
+        </a>
+      </div>
+
+      <button class="contact-btn">Contact</button>
     </footer>
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
 
     <script src="./javascript/nav.js"></script>
   </body>
